fix some spelling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,11 @@
     "cSpell.words": [
         "alist",
         "Atmass",
+        "cals",
+        "Hashbrown",
+        "kals",
+        "mealplan",
+        "Popcorners",
         "toppasswords",
         "waterflow",
         "wordlist"
