Got chatGibitty to make GUI for me just as an experiment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,10 @@
         "Hashbrown",
         "kals",
         "mealplan",
+        "padx",
+        "pady",
         "Popcorners",
+        "Segoe",
         "toppasswords",
         "waterflow",
         "wordlist"
